# ChironAI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_RULES.md  Apple_Collection_Quality_Audit.md  CHANGELOG.md  CODE_OF_CONDUCT.md  ClaudeCode.md  DEPENDENCIES.md  Dockerfile  Improvement.md  Improvements2.md  Imprv.md  LICENSE  LLM_Code_Evaluation.md  Makefile  Module_Independence.md  OLLAMA_EXTENSION_MIGRATION_TODO.md  POST_MVP.md  QUALITY_AUDIT.md  QUICK_START.md  README.md  RELEASE.md  Refactor.md  SECURITY.md  SENIOR_IOS_ASSISTANT_MANIFEST.md  SETUP_INSTRUCTIONS.md  Start_Proxy.cmd  Swagger.md  TODO.md  TODO_Completed.md  TODO_IDE.md  TODO_PROXY.md  TROUBLESHOOTING.md  Way to 1000.md  _probe_results.json  app.py  build_and_run.bat  build_and_run.cmd  (+29 more)
.github/: CODEOWNERS  (+2 more)
Core/modules/crawler_service/: README.md  pyproject.toml
Core/modules/crawler_service/crawler_service/: constants.py  crawler_settings.py  paths.py  sources_io.py
Core/modules/extensions_backend/: README.md  pyproject.toml
Core/modules/extensions_backend/extensions_backend/: __init__.py  blocklist.py  docker_updates.py  registry_client.py  repository_metadata.py  service.py
Core/modules/html_md/: README.md  pyproject.toml
Core/modules/html_md/html_md/: __init__.py  convert.py
Core/modules/webui_backend/: README.md  pyproject.toml
Core/modules/webui_backend/webui_backend/: app.py  app_factory.py  app_tester.py  apple_docs_extract.py  apple_docs_fetcher.py  apple_docs_html.py  apple_docs_markdown.py  apple_docs_metadata.py  apple_docs_models.py  apple_docs_parser.py  apple_docs_scope.py  apple_docs_sections.py  apple_docs_text.py  ingest_markdown_common.py  kill_listeners_on_config_port.py  open_browser_when_ready.py  paths.py  rag_proxy.py  static_routes.py
CoreModules/ClawCode/: README.md  pyproject.toml
CoreModules/ClawCode/clawcode/: __init__.py  __main__.py  agent_runner.py  http_server.py  mcp_info_app.py  skills_manager.py  skills_registry.py  trace_journal.py  trace_store.py  vendor_manager.py
CoreModules/ErrorManager/: README.md  pyproject.toml
CoreModules/ErrorManager/error_manager/: __init__.py  codes.py  exceptions.py  http.py
CoreModules/ExtensionsHost/: README.md  pyproject.toml
CoreModules/ExtensionsHost/extensions_host/: __init__.py  wiring.py
CoreModules/LlmInteractor/: README.md  pyproject.toml
CoreModules/LlmInteractor/llm_interactor/: __init__.py  compat.py  contracts.py  discovery.py  install_state.py  manager.py  manager_archive.py  manager_blocklist.py  manager_bootstrap.py  manager_extension_tabs.py  manager_install_helpers.py  manager_provider_catalog.py  manager_registry.py  manifest.py  registry_client.py  runtime.py
CoreModules/LlmProxy/: README.md  pyproject.toml
CoreModules/LlmProxy/llm_proxy/: __init__.py  anthropic_compat.py  api_key.py  apply_edit.py  chat_completions.py  chat_completions_gemini_native.py  chat_completions_handler.py  chat_completions_handler_closures.py  chat_completions_handler_dispatch.py  chat_completions_handler_helpers.py  chat_completions_handler_prepare.py  chat_completions_legacy_tool_stream.py  chat_completions_messages.py  chat_completions_native_tools_nonstream.py  chat_completions_native_tools_prep.py  chat_completions_nonstream_response.py  chat_completions_ollama_proxy.py  chat_completions_rag_orchestration.py  chat_completions_rag_prep.py  chat_completions_request_parsing.py  chat_completions_response_helpers.py  chat_completions_run_phases.py  chat_completions_sse_generators.py  chat_completions_streaming.py  chat_completions_streaming_orchestration.py  chat_completions_trace_persistence.py  chat_completions_trace_request.py  chat_completions_upstream_budget.py  completions_generate.py  config.py  contracts.py  edit_state.py  external_ingest.py  ollama_compat.py  ollama_think.py  ollama_upstream.py  openai_multipart_vision.py  openai_ollama_tool_bridge.py  openai_text_completion_format.py  pipeline_policy.py  (+9 more)
CoreModules/LlmProxy/llm_proxy/pipeline_steps/: __init__.py  definitions.py  merged_docs_step.py  web_supplement_step.py
CoreModules/LlmProxy/llm_proxy/wire_format/: __init__.py  gemini_model_id.py  model_brand.py  model_capabilities.py
CoreModules/Localization/: README.md  pyproject.toml
CoreModules/Localization/localization/: __init__.py  catalog.py
CoreModules/LogsManager/: README.md  pyproject.toml
CoreModules/LogsManager/logs_manager/: __init__.py  db.py  manager.py
CoreModules/MdIngestionService/: README.md  pyproject.toml  requirements.txt
CoreModules/MdIngestionService/md_ingestion_service/: __init__.py
CoreModules/MdIngestionService/md_ingestion_service/api/: __init__.py  cli.py
CoreModules/OllamaInteractor/: README.md  pyproject.toml
CoreModules/OllamaInteractor/ollama_interactor/: __init__.py  __main__.py  cli.py  ollama_http.py
CoreModules/ProxyV2/: README.md  pyproject.toml
CoreModules/ProxyV2/proxy_v2/: __init__.py  app.py  chat_v1.py  completions_v1.py  contracts.py  ollama_forward.py  ollama_url.py  text_completion_format.py  trace_store.py
CoreModules/ProxyV2/tests/: test_proxy_v2_app.py
CoreModules/RagService/: README.md  pyproject.toml
CoreModules/RagService/chironai_rag/: __init__.py  bindings.py  consumers.py  policy.py  ports.py
CoreModules/RagService/docs/: QDRANT_VECTOR_MODES.md
CoreModules/RagService/rag_service/: __init__.py  __main__.py  cli.py  config.py  qdrant_health_monitor.py  runtime.py
CoreModules/ServiceStarter/: README.md  pyproject.toml
CoreModules/ServiceStarter/servicestarter/: __init__.py  __main__.py  cli.py  config.py  docker_ops.py  engine.py  ollama_ops.py  windows_install.py
CoreModules/WebInteraction/: README.md  pyproject.toml
CoreModules/WebInteraction/web_interaction/: __init__.py  cache.py  config.py  fetch_excerpt.py  format.py  query_build.py  ranking.py  search.py  supplement.py  triggers.py  wikipedia_fallback.py
modules/external_docs_rag/: README.md  pyproject.toml
modules/external_docs_rag/config/: sources.yaml
modules/external_docs_rag/external_docs_rag/: config_loader.py
(+1455 files in other folders)
