[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai"
version = "0.2.0"
description = "Modular RAG platform (Ollama + Qdrant) with WebUI and crawl/index pipelines. Configured for Apple platforms, supports any domain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ChironAI contributors" }]
keywords = ["rag", "ollama", "qdrant", "flask"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "flask",
  "flask-restx>=1.3.0",
  "requests",
  "duckduckgo-search>=6.0",
  "qdrant-client",
  "langchain-text-splitters",
  "html2text",
  "playwright",
  "lxml>=6.0.0",
  "waitress>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "import-linter>=2.0",
  "ruff>=0.8.0",
  "vulture>=2.14",
]

[project.scripts]
chironai = "api.cli.__main__:main"
tmrag = "api.cli.__main__:main"

[project.urls]
Homepage = "https://github.com"

# --- Editable install: core Python packages at repository root plus canonical shared modules
[tool.setuptools.packages.find]
where = ["."]
include = [
  "application*",
  "api*",
  "config*",
  "core*",
  "chironai_security*",
  "extensions_sandbox*",
  "extensions_backend*",
  "domain*",
  "infrastructure*",
  "webui_backend*",
]
exclude = ["tests*", "tests"]

[tool.setuptools.package-dir]
chironai_security = "CoreModules/Security/chironai_security"
extensions_sandbox = "CoreModules/ExtensionsSandbox/extensions_sandbox"
extensions_backend = "modules/extensions_backend/extensions_backend"
webui_backend = "modules/webui_backend/webui_backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "modules/webui_backend",
    "modules/crawler_service",
    "modules/extensions_backend",
    "modules/html_md",
    "CoreModules/LlmInteractor",
    "CoreModules/Security",
    "CoreModules/ExtensionsSandbox",
    "CoreModules/DockerManager",
    "CoreModules/LlmProxy",
    "CoreModules/RagService",
    "CoreModules/WebInteraction",
    "CoreModules/LogsManager",
    "CoreModules/MdIngestionService",
    "CoreModules/ErrorManager",
    "CoreModules/Localization",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:cacheprovider"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "fast: tests included in the local fast gate",
    "slow: tests excluded from the local fast gate because they are intentionally long-running",
    "api: Flask/API route and contract tests",
    "application: application-layer tests",
    "config: configuration resolution tests",
    "domain: pure domain logic tests",
    "docker: Docker manager and Docker ownership tests",
    "extensions: extension runtime, registry, sandbox, and provider tests",
    "infrastructure: infrastructure adapter/repository tests",
    "integration: tests that exercise multiple layers or subprocess-style boundaries",
    "llm_proxy: OpenAI-compatible proxy tests",
    "scripts: repository script smoke tests",
    "security: security and audit tests",
    "service: standalone service/package tests",
    "web_interaction: web interaction query/ranking/cache tests",
    "webui: Web UI backend/helper tests",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = [
  "application",
  "api",
  "config",
  "core",
  "domain",
  "infrastructure",
  "tests",
  "CoreModules/LlmInteractor/llm_interactor",
  "CoreModules/Security/chironai_security",
  "CoreModules/ExtensionsSandbox/extensions_sandbox",
  "CoreModules/DockerManager/docker_manager",
  "CoreModules/LlmProxy/llm_proxy",
  "CoreModules/RagService/chironai_rag",
  "CoreModules/RagService/rag_service",
  "CoreModules/WebInteraction/web_interaction",
  "CoreModules/LogsManager/logs_manager",
  "CoreModules/MdIngestionService/md_ingestion_service",
  "modules/webui_backend/webui_backend",
  "modules/crawler_service/crawler_service",
  "modules/extensions_backend/extensions_backend",
  "modules/html_md/html_md",
]
exclude = [
  ".venv",
  "venv",
  "CoreModules/CoreUI",
  "modules/open_webui",
]

[tool.ruff.lint]
select = ["E9", "F", "I", "B"]
ignore = ["B008", "B011", "B017", "B023", "B904", "B905", "B007"]

[tool.ruff.lint.isort]
known-first-party = [
  "api",
  "application",
  "config",
  "core",
  "domain",
  "infrastructure",
  "webui_backend",
]

# Domain layer must not depend on outer layers (application / api / infrastructure).
[tool.importlinter]
root_package = "domain"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain_is_inner_layer"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["application", "api", "infrastructure"]

# Dead code scan: `python -m vulture` (reads paths/exclude from here; default --config pyproject.toml).
[tool.vulture]
min_confidence = 80
paths = [
  "application",
  "api",
  "config",
  "domain",
  "infrastructure",
  "CoreModules",
  "modules/webui_backend/webui_backend",
  "modules",
  "modules/html_md",
  "scripts",
  "tests",
]
exclude = [
  "vendor",
  "backups",
  ".venv",
  "venv",
  "CoreModules/CoreUI",
  "modules/open_webui",
]
ignore_decorators = [
  "@*.route",
  "@*.before_first_request",
]

