[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai"
version = "0.7.20"
description = "Modular RAG platform (Ollama + Qdrant) with WebUI and crawl/index pipelines. Configured for Apple platforms, supports any domain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ChironAI contributors" }]
keywords = ["rag", "ollama", "qdrant", "flask"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "flask",
  "flask-restx>=1.3.0",
  "requests>=2.33.0",
  "urllib3>=2.7.0",
  "werkzeug>=3.1.6",
  "duckduckgo-search>=6.0",
  "qdrant-client",
  "langchain-text-splitters>=1.1.2",
  "html2text",
  "playwright",
  "lxml>=6.1.0",
  "waitress>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=4.0.0",
  "import-linter>=2.0",
  "ruff>=0.8.0",
  "vulture>=2.14",
  "pyright>=1.1.0",
  "pip-audit>=2.7.0",
]

[project.scripts]
chironai = "api.cli.__main__:main"
tmrag = "api.cli.__main__:main"

[project.urls]
Homepage = "https://github.com"

# --- Editable install: root packages plus canonical shared modules (multi-root discovery)
[tool.setuptools.packages.find]
where = [
  "Core",
  "CoreModules/Security",
  "CoreModules/ExtensionsSandbox",
  "Core/modules/extensions_backend",
  "Core/modules/webui_backend",
]
include = [
  "application*",
  "api*",
  "config*",
  "core*",
  "chironai_security*",
  "extensions_sandbox*",
  "extensions_backend*",
  "domain*",
  "infrastructure*",
  "webui_backend*",
]
exclude = ["tests*", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "Core",
    "Core/modules/webui_backend",
    "Core/modules/crawler_service",
    "Core/modules/extensions_backend",
    "Core/modules/html_md",
    "Core/modules/prompts_manager",
    "CoreModules/LlmInteractor",
    "CoreModules/Security",
    "CoreModules/ExtensionsSandbox",
    "CoreModules/ExtensionsHost",
    "CoreModules/DockerManager",
    "CoreModules/LlmProxy",
    "CoreModules/RagService",
    "CoreModules/WebInteraction",
    "CoreModules/LogsManager",
    "CoreModules/MdIngestionService",
    "CoreModules/ErrorManager",
    "CoreModules/Localization",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:cacheprovider"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "fast: tests included in the local fast gate",
    "slow: tests excluded from the local fast gate because they are intentionally long-running",
    "api: Flask/API route and contract tests",
    "application: application-layer tests",
    "config: configuration resolution tests",
    "domain: pure domain logic tests",
    "docker: Docker manager and Docker ownership tests",
    "extensions: extension runtime, registry, sandbox, and provider tests",
    "infrastructure: infrastructure adapter/repository tests",
    "integration: tests that exercise multiple layers or subprocess-style boundaries",
    "llm_proxy: OpenAI-compatible proxy tests",
    "scripts: repository script smoke tests",
    "security: security and audit tests",
    "service: standalone service/package tests",
    "web_interaction: web interaction query/ranking/cache tests",
    "webui: Web UI backend/helper tests",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = [
  "Core/application",
  "Core/api",
  "Core/config",
  "Core/core",
  "Core/domain",
  "Core/infrastructure",
  "tests",
  "CoreModules/LlmInteractor/llm_interactor",
  "CoreModules/Security/chironai_security",
  "CoreModules/ExtensionsSandbox/extensions_sandbox",
  "CoreModules/ExtensionsHost/extensions_host",
  "CoreModules/DockerManager/docker_manager",
  "CoreModules/LlmProxy/llm_proxy",
  "CoreModules/RagService/chironai_rag",
  "CoreModules/RagService/rag_service",
  "CoreModules/WebInteraction/web_interaction",
  "CoreModules/LogsManager/logs_manager",
  "CoreModules/MdIngestionService/md_ingestion_service",
  "Core/modules/webui_backend/webui_backend",
  "Core/modules/crawler_service/crawler_service",
  "Core/modules/extensions_backend/extensions_backend",
  "Core/modules/html_md/html_md",
  "Core/modules/prompts_manager/prompts_manager",
]
exclude = [
  ".venv",
  "venv",
  "CoreModules/CoreUI",
  "Core/modules/open_webui",
]

[tool.ruff.lint]
select = ["E9", "F", "I", "B", "SIM"]
ignore = ["B008", "B011", "B017", "B023", "B904", "B905", "B007"]

[tool.ruff.lint.isort]
known-first-party = [
  "api",
  "application",
  "config",
  "core",
  "domain",
  "infrastructure",
  "webui_backend",
  "prompts_manager",
]

# Domain layer must not depend on outer layers (application / api / infrastructure).
[tool.importlinter]
root_packages = ["domain", "application", "infrastructure"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain_is_inner_layer"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["application", "api", "infrastructure"]

[[tool.importlinter.contracts]]
name = "application_not_import_api"
type = "forbidden"
source_modules = ["application"]
forbidden_modules = ["api"]

[[tool.importlinter.contracts]]
name = "infrastructure_not_import_api"
type = "forbidden"
source_modules = ["infrastructure"]
forbidden_modules = ["api"]

# Dead code scan: `python -m vulture` (reads paths/exclude from here; default --config pyproject.toml).
[tool.vulture]
min_confidence = 80
paths = [
  "Core/application",
  "Core/api",
  "Core/config",
  "Core/domain",
  "Core/infrastructure",
  "Core/core",
  "CoreModules",
  "Core/modules/webui_backend/webui_backend",
  "Core/modules",
  "Core/modules/html_md",
  "Core/modules/prompts_manager/prompts_manager",
  "scripts",
  "tests",
]
exclude = [
  "vendor",
  "backups",
  ".venv",
  "venv",
  "CoreModules/CoreUI",
  "Core/modules/open_webui",
]
ignore_decorators = [
  "@*.route",
  "@*.before_first_request",
]

