[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clawcode"
version = "0.1.0"
description = "ChironAI ClawCode agent HTTP (OpenAI-style) + traces + vendor helpers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flask>=2.3", "requests>=2.28"]

[tool.setuptools]
packages = ["clawcode"]

[project.scripts]
clawcode-serve = "clawcode.__main__:main"
