[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai-error-manager"
version = "0.1.0"
description = "Structured error codes and HTTP mapping for ChironAI"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["error_manager"]
