[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-interactor"
version = "0.1.0"
description = "Blind LLM runtime and extension loader for ChironAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[tool.setuptools]
packages = ["llm_interactor"]
