[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-proxy"
version = "0.1.0"
description = "OpenAI-compatible RAG LLM proxy (Flask blueprint) with injectable host wiring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flask>=2.3"]

[tool.setuptools]
packages = ["llm_proxy"]
