[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai-rag-service"
version = "0.1.0"
description = "ChironAI RAG: hexagonal pipeline (rag_service), consumer contracts (chironai_rag), bindings and policy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=2.3",
  "requests>=2.28",
  "httpx>=0.24",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chironai_rag*", "rag_service*"]
