[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai-rag-service"
version = "0.1.0b1"
description = "ChironAI RAG Beta 0.1: standalone retrieval service package with no monorepo runtime dependency"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=2.3",
  "requests>=2.28",
  "httpx>=0.24",
  "pyyaml>=6.0",
]

[project.scripts]
rag-service = "rag_service.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chironai_rag*", "rag_service*"]
