[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "service-starter"
version = "0.1.0"
description = "Start and install local dependencies: Docker Desktop, Ollama, Qdrant, Open WebUI (importable API + CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.scripts]
servicestarter = "servicestarter.cli:main"

[tool.setuptools]
packages = ["servicestarter"]
