[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai-external-docs-rag"
version = "0.1.0"
description = "External documentation RAG fetch and index pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.24.0",
  "requests>=2.28.0",
  "qdrant-client>=1.7.0",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["external_docs_rag*"]
