[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai-crawler-service"
version = "0.1.0"
description = "ChironAI crawl: Playwright deep crawl, WWDC transcripts, rag_sources FS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28",
  "playwright",
  "html2text",
  "lxml>=6.0.0",
  "PyYAML>=6",
  "chironai-html-md",
]

[project.scripts]
chironai-crawl = "crawler_service.api.cli:main"

[project.urls]
Homepage = "https://github.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["crawler_service*"]
