[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chironai-extensions-backend"
version = "0.1.0"
description = "Extension registry and blocklist backend for ChironAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["extensions_backend*"]
